Incluído rota status no Swagger
